Unrecoverable DC kernel warning after GPU reset with an external display connected
Brief summary of the problem:
With an external display connected, Strix Point seems to have an issue with GPU resets - they complete successfully, but Display Core throws an unrecoverable kernel warning causing the external display to become fully green, infinite pageflip timeouts and preventing basic operations, like poweroff. SSH might still work sometimes (that's how I managed to get the dmesg log).
Hardware description:
- CPU: AMD Ryzen AI 9 365 w/ Radeon 880M
- GPU: [AMD/ATI] Strix [Radeon 880M] [1002:150e] (rev c4)
- System Memory: 32GiB (with a 4GiB UMA buffer size)
- Display(s): internal OLED eDP 120Hz display, external 1080p 165Hz display and/or external 4K 60Hz display
- Type of Display Connection: eDP, HDMI
(this is on a Lenovo Yoga Pro 7 14ASP9 laptop)
System information:
- Distro name and Version: Arch Linux
- Kernel version: 6.12.1-arch1, reproducible on 6.13-rc1 as well
- Custom kernel: N/A
- AMD official driver version: N/A
How to reproduce the issue:
- Have an external display connected or connect one
- Invoke a reset with either sysfs or a gfx/vcn timeout
There's also an issue where if the GPU was reset at least once without an external display, it will not accept new display connections until after a re-modprobe of the driver, similarly to #3788.
PSR on/off does not matter.
Attached files:
Log files (for system lockups / game freezes / crashes)
- Dmesg log (full log): dmesg.log